objects/Time_Stamp__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_f_c__c</fullName>
        <formula>If(
Datevalue(CreatedDate)&gt;=Datevalue("2014-7-1"),Datevalue(CreatedDate),
Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_the_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the time spent billable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_select_your_role__c</fullName>
        <label>Please select your role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implementation Consultant</fullName>
                </value>
                <value>
                    <fullName>Client Success Manager</fullName>
                </value>
                <value>
                    <fullName>Implementation Analyst</fullName>
                </value>
                <value>
                    <fullName>Strategic Account Analyst</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Stamp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMM_Implementations__c</fullName>
        <label>SMM Implementations</label>
        <referenceTo>SMM_Implementations__c</referenceTo>
        <relationshipLabel>Time Stamp</relationshipLabel>
        <relationshipName>Time_Stamp</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Non_Billable_Hours__c</fullName>
        <label>Time Spent (Non Billable Hours)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <label>Time Spent(Billable Hours)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Stamp</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Time Stamp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Stamp</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>